Reworked the container so full width designs are possible

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -3,7 +3,7 @@
 
 {{ range first 10 .Data.Pages }}
 
-<article class="post {{ .Section }}">
+<article class="container post {{ .Section }}">
     <header class="post-header">
         <h2 class="post-title"><a href="{{ .RelPermalink }}">{{ .Title }}</a></h2>
     </header>
