--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,65 +1,69 @@
 {{ partial "header.html" . }}
 
 <section id="projects-container">
-    <h1>Projects</h1>
-    {{ range .Site.Data.projects }}
-    <article class="project">
-        <div><img src="img/{{ .img }}" alt="" /></div>
-        <div class="project-info">
-            <h2>{{ .title }}</h2>
-            <ul class="project-tags">
-            {{ range $index, $tag := .tags }}
-                <li>{{ $tag }}</li>
-            {{ end }}
-            </ul>
-            <p>
-                {{ .description }}
-            </p>
-            <ul class="project-links">
-            {{ if .blogPost }}
-                <li><a href="{{ .blogPost }}"><i class="fa fa-rss-square"></i> Blog post</a></li>
-            {{ end }}
-            {{ if .github }}
-                <li><a href="{{ .github }}"><i class="fa fa-github"></i> Github</a></li>
-            {{ end }}
-            {{ if .website }}
-                <li><a href="{{ .website }}">Website</a></li>
-            {{ end }}
-            </ul>
-        </div>
-    </article>
-    {{ end }}
+    <div class="container">
+        <h1>Projects</h1>
+        {{ range .Site.Data.projects }}
+        <article class="project">
+            <div><img src="img/{{ .img }}" alt="" /></div>
+            <div class="project-info">
+                <h2>{{ .title }}</h2>
+                <ul class="project-tags">
+                {{ range $index, $tag := .tags }}
+                    <li>{{ $tag }}</li>
+                {{ end }}
+                </ul>
+                <p>
+                    {{ .description }}
+                </p>
+                <ul class="project-links">
+                {{ if .blogPost }}
+                    <li><a href="{{ .blogPost }}"><i class="fa fa-rss-square"></i> Blog post</a></li>
+                {{ end }}
+                {{ if .github }}
+                    <li><a href="{{ .github }}"><i class="fa fa-github"></i> Github</a></li>
+                {{ end }}
+                {{ if .website }}
+                    <li><a href="{{ .website }}">Website</a></li>
+                {{ end }}
+                </ul>
+            </div>
+        </article>
+        {{ end }}
+    </div>
 </section>
 
 <section id="aboutme-container">
-    <h1>About Me</h1>
-    <div class="aboutme-content">
-        <div class="technical">
-            <h2>Technical</h2>
-            <p>
-                I first started my coding adventure in 2007 with a simple website, and since then both my skills and interests have developed. These days, it's not only coding, but also hardware, networking and other IT related projects.
-            </p>
-            <!--<p><a href="">Download Résumé (PDF)</a></p>-->
-            <p><span>Relevant Skills:</span></p>
-            <ul>
-                <li>HTML / CSS</li>
-                <li>Javascript</li>
-                <li>PHP</li>
-                <li>C#</li>
-                <li>Photoshop</li>
-                <li>Sony Vegas</li>
-                <li>Linux</li>
-            </ul>
-        </div>
-        <div class="non-technical">
-            <h2>Non-Technical</h2>
-            <p>
-                I am Lasse G. Bjerre, designer / developer and tech lover based in Aalborg, Denmark.
-                I love technology and everything it brings with it, and I have developed a passion for it like no other over the years. Along with my passion for technology comes my passion to create. Getting an idea and making it come to life is something I value very highly.
+    <div class="container">
+        <h1>About Me</h1>
+        <div class="aboutme-content">
+            <div class="technical">
+                <h2>Technical</h2>
+                <p>
+                    I first started my coding adventure in 2007 with a simple website, and since then both my skills and interests have developed. These days, it's not only coding, but also hardware, networking and other IT related projects.
+                </p>
+                <!--<p><a href="">Download Résumé (PDF)</a></p>-->
+                <p><span>Relevant Skills:</span></p>
+                <ul>
+                    <li>HTML / CSS</li>
+                    <li>Javascript</li>
+                    <li>PHP</li>
+                    <li>C#</li>
+                    <li>Photoshop</li>
+                    <li>Sony Vegas</li>
+                    <li>Linux</li>
+                </ul>
+            </div>
+            <div class="non-technical">
+                <h2>Non-Technical</h2>
+                <p>
+                    I am Lasse G. Bjerre, designer / developer and tech lover based in Aalborg, Denmark.
+                    I love technology and everything it brings with it, and I have developed a passion for it like no other over the years. Along with my passion for technology comes my passion to create. Getting an idea and making it come to life is something I value very highly.
 
-                I create websites, media products and solve IT related problems. I very much see myself as a Jack of all trades.
-            </p>
-            <p>You can reach me at: <a href="mailto:lasse@lgb.dk">lasse@lgb.dk</a></p>
+                    I create websites, media products and solve IT related problems. I very much see myself as a Jack of all trades.
+                </p>
+                <p>You can reach me at: <a href="mailto:lasse@lgb.dk">lasse@lgb.dk</a></p>
+            </div>
         </div>
     </div>
 </section>
