Added contact section on front page and reworked colors

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -62,9 +62,15 @@
 
                     I create websites, media products and solve IT related problems. I very much see myself as a Jack of all trades.
                 </p>
-                <p>You can reach me at: <a href="mailto:lasse@lgb.dk">lasse@lgb.dk</a></p>
             </div>
         </div>
+    </div>
+</section>
+
+<section id="contact" class="contact">
+    <div class="container">
+        <h1>Get in touch</h1>
+        <h2>Want to contact me? Feel free to send me an email at <a href="mailto:{{ .Site.Author.mail }}">{{ .Site.Author.mail }}</a></h2>
     </div>
 </section>
 
