--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -24,6 +24,7 @@
                 <li><a href="/">Home</a></li>
                 <li><a href="/#projects-container">Projects</a></li>
                 <li><a href="/#aboutme-container">About Me</a></li>
+                <li><a href="/#contact">Contact</a></li>
                 <li><a href="/post">Blog</a></li>
             </ul>
             <ul class="nav-social-icons">
