--- a/static/css/style.css
+++ b/static/css/style.css
@@ -49,7 +49,7 @@ table {
 
 /*--- GENERAL STUFF ---*/
 html {
-    background-color: #eee;
+    background-color: #34495E;
 }
 
 body {
@@ -71,11 +71,11 @@ body {
 
 a, .header-show-menu {
     text-decoration: none;
-    color: #aaa;
+    color: #999;
 }
 
 a:hover, .header-show-menu:hover {
-    color: #168BBB !important;
+    color: #3498DB !important;
 }
 
 /*--- HEADER ---*/
@@ -329,7 +329,7 @@ body>section,article {
 
 .project-tags li {
     display: inline-block;
-    background-color: #168BBB;
+    background-color: #3498DB;
     padding: 5px 7px;
     border-radius: 5px;
     font-weight: 300;
@@ -352,16 +352,13 @@ body>section,article {
 /*--- ABOUT ME ---*/
 
 #aboutme-container {
-    background: #34495e;
-    color: #bdc3c7;
-    font-weight: 300;
+    background: #f6f6f6;
 }
 
 #aboutme-container h1 {
     font-weight: 600;
     font-size: 2.5em;
     margin-bottom: 20px;
-    color: #ecf0f1;
 }
 
 .aboutme-content {
@@ -370,7 +367,7 @@ body>section,article {
 }
 
 .technical {
-    border-bottom: 3px solid #168BBB;
+    border-bottom: 3px solid #3498DB;
     padding-bottom: 10px;
 }
 
@@ -404,7 +401,7 @@ body>section,article {
 
         .technical {
             border-bottom: none;
-            border-right: 3px solid #168BBB;
+            border-right: 3px solid #3498DB;
             padding-right: 10px;
             flex: 1 100%;
         }
@@ -421,7 +418,6 @@ body>section,article {
     font-size: 2em;
     margin-bottom: 20px;
     font-weight: 300;
-    color: #ecf0f1;
 }
 
 /*--- BLOG ---*/
@@ -485,29 +481,56 @@ body>section,article {
     font-size: 0.8em;
 }
 
+/*--- CONTACT ---*/
+
+.contact{
+    background: #fbc93d;
+    text-align: center;
+    height: 25vh;
+    display: flex;
+    align-items: center;
+}
+
+.contact h1 {
+    font-size: 40px;
+    line-height: 46px;
+    font-weight: 600;
+}
+
+.contact h2 {
+    font-size: 28px;
+    line-height: 36px;
+    font-weight: 300;
+}
+
 /*--- FOOTER ---*/
 
 .site-footer {
     /*background-color: #1A1A1A;*/
     /*border-top: 4px #168BBB solid;*/
-    background-color: #eee;
-    box-shadow: inset 0 10px 10px -10px #DDD;
-    height: 100px;
+    /*box-shadow: inset 0 10px 10px -10px #DDD;*/
+    background-color: #34495E;
+    height: 75px;
     /*padding: 0 30px;*/
-    color: #999;
+    color: #ddd;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    font-weight: 300;
+}
+
+.site-footer a {
+    color: #ddd;
 }
 
 .copyright {
-    line-height: 100px;
+    line-height: 75px;
     margin-left: 30px;
 }
 
 .footer-social-icons {
     text-align: right;
-    line-height: 100px;
+    line-height: 75px;
     font-size: 2em;
     margin-right: 30px;
 }
