Cleaned up CSS a bit

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,6 +1,6 @@
 {{ partial "header.html" . }}
 
-<section id="projects-container">
+<section id="projects">
     <div class="container">
         <h1>Projects</h1>
         {{ range .Site.Data.projects }}
@@ -33,7 +33,7 @@
     </div>
 </section>
 
-<section id="aboutme-container">
+<section id="aboutme">
     <div class="container">
         <h1>About Me</h1>
         <div class="aboutme-content">
@@ -43,7 +43,7 @@
                     I first started my coding adventure in 2007 with a simple website, and since then both my skills and interests have developed. These days, it's not only coding, but also hardware, networking and other IT related projects.
                 </p>
                 <!--<p><a href="">Download Résumé (PDF)</a></p>-->
-                <p><span>Relevant Skills:</span></p>
+                <h3>Relevant Skills</h3>
                 <ul>
                     <li>HTML / CSS</li>
                     <li>Javascript</li>
