--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -22,8 +22,8 @@
         <nav>
             <ul class="nav-links">
                 <li><a href="/">Home</a></li>
-                <li><a href="/#projects-container">Projects</a></li>
-                <li><a href="/#aboutme-container">About Me</a></li>
+                <li><a href="/#projects">Projects</a></li>
+                <li><a href="/#aboutme">About Me</a></li>
                 <li><a href="/#contact">Contact</a></li>
                 <li><a href="/post">Blog</a></li>
             </ul>
