--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -8,6 +8,8 @@
     {{ if .IsPage }}<link rel="stylesheet" href="/css/github-markdown.css" media="screen" charset="utf-8">{{ end }}
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,600" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link href="/index.xml" rel="alternate" type="application/rss+xml" title="RSS">
+    <meta name="description" content="Portfolio for Lasse Bjerre, a technology enthusiast and coffee drinker">
     <title>{{ .Site.Title }}</title>
 </head>
 <body>
@@ -21,23 +23,22 @@
         <input type="checkbox" id="show-menu" role="button">
         <nav>
             <ul class="nav-links">
-                <li><a href="/">Home</a></li>
                 <li><a href="/#projects">Projects</a></li>
                 <li><a href="/#aboutme">About Me</a></li>
                 <li><a href="/#contact">Contact</a></li>
                 <li><a href="/post">Blog</a></li>
             </ul>
             <ul class="nav-social-icons">
-                <li><a href="{{ .Site.Author.github }}"><i class="fa fa-github"></i></a></li>
-                <li><a href="{{ .Site.Author.steam }}"><i class="fa fa-steam"></i></a></li>
-                <li><a href="{{ .Site.Author.twitter }}"><i class="fa fa-twitter"></i></a></li>
-                <li><a href="{{ .Site.Author.linkedin }}"><i class="fa fa-linkedin"></i></a></li>
-                <li><a href="mailto:{{ .Site.Author.mail }}"><i class="fa fa-envelope"></i></a></li>
+                <li><a href="{{ .Site.Author.github }}" title="Github"><i class="fa fa-github"></i></a></li>
+                <li><a href="{{ .Site.Author.steam }}" title="Steam"><i class="fa fa-steam"></i></a></li>
+                <li><a href="{{ .Site.Author.twitter }}" title="Twitter"><i class="fa fa-twitter"></i></a></li>
+                <li><a href="{{ .Site.Author.linkedin }}" title="LinkedIn"><i class="fa fa-linkedin"></i></a></li>
+                <li><a href="mailto:{{ .Site.Author.mail }}" title="Send me a mail!"><i class="fa fa-envelope"></i></a></li>
             </ul>
         </nav>
         {{ if not .Params.cover }}
         <div class="header-feature">
-            <img src="{{ .Site.Author.profilePicture }}" />
+            <img src="{{ .Site.Author.profilePicture }}" alt="{{ .Site.Author.name }}" />
             <h1 class="feature-heading">{{ .Site.Author.name }}</h1>
             <h2 class="feature-tagline">{{ .Site.Params.tagline }}</h2>
         </div>
