--- a/static/css/style.css
+++ b/static/css/style.css
@@ -72,6 +72,7 @@ body>section,article {
 a, .header-show-menu {
     text-decoration: none;
     color: #999;
+    transition: .2s;
 }
 
 a:hover, .header-show-menu:hover {
@@ -107,7 +108,7 @@ h3 {
 
     @media only screen and (min-width: 750px) {
         .site-header {
-            padding: 0 30px;
+            padding: 0 20px;
         }
     }
 
@@ -118,7 +119,7 @@ h3 {
 .header-show-menu {
     position: absolute;
     top: 20px;
-    left: 30px;
+    left: 20px;
     display: inline-block;
     color: #FFF;
     font-weight: 300;
@@ -166,7 +167,7 @@ nav {
 
 .nav-links {
     position: relative;
-    margin: 80px 0 0 30px;
+    margin: 80px 0 0 20px;
 }
 
 .nav-links li {
@@ -180,7 +181,7 @@ nav {
 
 .nav-social-icons {
     position: relative;
-    margin: 120px 0 0 30px;
+    margin: 120px 0 0 20px;
 }
 
 .nav-social-icons li {
@@ -255,7 +256,7 @@ nav {
 }
 
 .project {
-    padding: 30px 0;
+    padding: 20px 0;
     display: flex;
     flex-direction: column;
 }
@@ -273,7 +274,7 @@ nav {
 }
 
 .project-info {
-    margin: 0 30px;
+    margin: 0 20px;
 }
 
     @media only screen and (min-width: 750px) {
@@ -418,7 +419,7 @@ nav {
 }
 
 .post-content {
-    margin: 30px 0;
+    margin: 20px 0;
     line-height: normal;
 }
 
@@ -475,7 +476,7 @@ nav {
     justify-content: space-between;
     flex-wrap: wrap;
     font-weight: 300;
-    padding: 0 30px;
+    padding: 0 20px;
 }
 
 .site-footer a {
