Fixed profile images

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -11,7 +11,7 @@
         <p>{{ .Summary }} <a class="read-more" href="{{.RelPermalink}}">Read more →</a></p>
     </section>
     <footer class="post-meta">
-        <img class="author-thumb" src="{{ .Site.Author.profilePicture }}" alt="Author image" nopin="nopin" />
+        <img class="author-thumb" src="{{ .Site.Author.profilepicture }}" alt="Author image" nopin="nopin" />
         {{ $author.name }}
 
         {{if .Params.tags }}on
