--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -38,7 +38,7 @@
         </nav>
         {{ if not .Params.cover }}
         <div class="header-feature">
-            <img src="{{ .Site.Author.profilePicture }}" alt="{{ .Site.Author.name }}" />
+            <img src="{{ .Site.Author.profilepicture }}" alt="{{ .Site.Author.name }}" />
             <h1 class="feature-heading">{{ .Site.Author.name }}</h1>
             <h2 class="feature-tagline">{{ .Site.Params.tagline }}</h2>
         </div>
