--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -7,7 +7,7 @@
         <small>{{.Description}}</small>
 
         <section class="post-meta">
-            <img class="author-thumb" src="{{ .Site.Author.profilePicture }}" alt="Author image" nopin="nopin" />
+            <img class="author-thumb" src="{{ .Site.Author.profilepicture }}" alt="Author image" nopin="nopin" />
             {{ $author.name }}
 
             {{if .Params.tags }}on
