--- a/static/css/style.css
+++ b/static/css/style.css
@@ -243,9 +243,9 @@ nav {
 }
 
 .header-feature img {
-    width: 120px;
-    height: 120px;
-    border-radius: 60px;
+    width: 200px;
+    height: 200px;
+    border-radius: 100px;
     box-shadow: 0px 0px 10px #000;
 }
 
@@ -278,6 +278,7 @@ nav {
     box-shadow: 2px 4px 8px #999;
     margin-bottom: 25px;
     width: 100%;
+	border-radius: 1em;
 }
 
 .project-info {
