Changed aboutme and removed some social links

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -37,40 +37,19 @@
     <div class="container">
         <h1>About Me</h1>
         <div class="aboutme-content">
-            <div class="technical">
-                <h2>Technical</h2>
-                <p>
-                    I first started my coding adventure in 2007 with a simple website, and since then both my skills and interests have developed. These days, it's not only coding, but also hardware, networking and other IT related projects.
-                </p>
-                <!--<p><a href="">Download Résumé (PDF)</a></p>-->
-                <h3>Relevant Skills</h3>
-                <ul>
-                    <li>HTML / CSS</li>
-                    <li>Javascript</li>
-                    <li>PHP</li>
-                    <li>C#</li>
-                    <li>Photoshop</li>
-                    <li>Sony Vegas</li>
-                    <li>Linux</li>
-                </ul>
-            </div>
-            <div class="non-technical">
-                <h2>Non-Technical</h2>
-                <p>
-                    I am Lasse G. Bjerre, designer / developer and tech enthusiast based in Aalborg, Denmark.
-                    I love technology and everything it brings with it, and I have developed a passion for it like no other over the years. Along with my passion for technology comes my passion to create. Getting an idea and making it come to life is something I value very highly.
-
-                    I create websites, media products and solve IT related problems. I very much see myself as a Jack of all trades.
-                </p>
-            </div>
+            <p>
+                My name is Lasse, and I am currently studying my masters degree in IT-management at Aalborg University, where I also got my bachelors degree in Information Technology. In addition to my studies, I am currently working as a student worker at Aalborg University's IT department, where I support other employees and students in the use of the IT-systems at the university. For the past 3 years, I have also been doing consultant-related work as part of being a volunteer at a local student organization. This work has consisted of, among other things, developing requirement specifications for new IT-systems, and implementing those systems across the organization.
+            </p>
+            <p>
+                I have been doing problem solving in everything IT related for a big part of my life, and that has given me both the technical knowledge and social skills to help others in this area of work. I see myself as disciplined and stable with a good portion of self-confidence, which is reflected in me being very tolerant and patient. I love technology and everything it brings with it, and I have developed a passion for it like no other over the years. Along with my passion for technology comes my passion to create. Getting an idea and making it come to life is something I value very highly.
+            </p>
+            <p>
+                When I am not working, I engage in new personal projects, movies, gaming and fitness.
+            </p>
+            <p>
+                If the above has your interest, you are welcome to contact me by email at <a href="mailto:{{ .Site.Author.mail }}">{{ .Site.Author.mail }}</a>. I would love to come by for a cup of coffee.
+            </p>
         </div>
-    </div>
-</section>
-
-<section id="contact" class="contact">
-    <div class="container">
-        <h1>Get in touch</h1>
-        <h2>Want to contact me? Feel free to send me an email at <a href="mailto:{{ .Site.Author.mail }}">{{ .Site.Author.mail }}</a></h2>
     </div>
 </section>
 
