--- a/static/css/style.css
+++ b/static/css/style.css
@@ -100,6 +100,11 @@ h3 {
     font-weight: 300;
 }
 
+section > .container > h1 {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
 /*--- HEADER ---*/
 
 .site-header {
@@ -263,7 +268,8 @@ nav {
 /*--- PROJECTS ---*/
 
 .project {
-    padding: 20px 0;
+    padding: 0;
+    margin-bottom: 20px;
     display: flex;
     flex-direction: column;
 }
@@ -354,8 +360,6 @@ nav {
 }
 
 .aboutme-content {
-    display: flex;
-    flex-direction: column;
 }
 
 .technical {
@@ -364,7 +368,7 @@ nav {
 }
 
 .aboutme-content p {
-    margin: 20px 0;
+    margin-bottom: 20px;
     line-height: 1.5;
     text-align: justify;
 }
