Fixed spacing when HTML is minified

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -18,13 +18,13 @@
                 </p>
                 <ul class="project-links">
                 {{ if .blogPost }}
-                    <li><a href="{{ .blogPost }}"><i class="fa fa-rss-square"></i> Blog post</a></li>
+                    <li><a href="{{ .blogPost }}"><i class="fas fa-rss-square"></i> Blog post</a></li>
                 {{ end }}
                 {{ if .github }}
-                    <li><a href="{{ .github }}"><i class="fa fa-github"></i> Github</a></li>
+                    <li><a href="{{ .github }}"><i class="fab fa-github"></i> Github</a></li>
                 {{ end }}
                 {{ if .website }}
-                    <li><a href="{{ .website }}">Website</a></li>
+                    <li><a href="{{ .website }}"><i class="fas fa-link"></i> Website</a></li>
                 {{ end }}
                 </ul>
             </div>
