--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,9 +1,9 @@
     <footer class="site-footer">
         <p class="copyright">&copy; {{ now.Format "2006" }} {{ .Site.Author.name }}. All Rights Reserved.</p>
         <ul class="footer-social-icons">
-            <li><a href="{{ .Site.Author.github }}" title="Github"><i class="fa fa-github"></i></a></li>
-            <li><a href="{{ .Site.Author.linkedin }}" title="LinkedIn"><i class="fa fa-linkedin"></i></a></li>
-            <li><a href="mailto:{{ .Site.Author.mail }}" title="Send me a mail!"><i class="fa fa-envelope"></i></a></li>
+            <li><a href="{{ .Site.Author.github }}" title="Github"><i class="fab fa-github-square"></i></a></li>
+            <li><a href="{{ .Site.Author.linkedin }}" title="LinkedIn"><i class="fab fa-linkedin"></i></a></li>
+            <li><a href="mailto:{{ .Site.Author.mail }}" title="Send me a mail!"><i class="fas fa-envelope-square"></i></a></li>
         </ul>
     </footer>
 </body>
