New projects and style changes

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
     {{ if .IsPage }}<link rel="stylesheet" href="/css/github-markdown.css" media="screen" charset="utf-8">{{ end }}
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,600" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,400i,600" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link href="/index.xml" rel="alternate" type="application/rss+xml" title="RSS">
     <meta name="description" content="Portfolio for Lasse Bjerre, a technology enthusiast and coffee drinker">
@@ -25,7 +25,6 @@
             <ul class="nav-links">
                 <li><a href="/#projects">Projects</a></li>
                 <li><a href="/#aboutme">About Me</a></li>
-                <li><a href="/#contact">Contact</a></li>
                 <li><a href="/post">Blog</a></li>
             </ul>
             <ul class="nav-social-icons">
