--- a/layouts/index.html
+++ b/layouts/index.html
@@ -3,9 +3,11 @@
 <section id="projects">
     <div class="container">
         <h1>Projects</h1>
-        {{ range .Site.Data.projects }}
+        {{ range sort .Site.Data.projects "order" }}
         <article class="project">
-            <div><img src="img/{{ .img }}" alt="{{ .title }}" /></div>
+            <div class="image">
+                <img src="img/{{ .img }}" alt="{{ .title }}" />
+            </div>
             <div class="project-info">
                 <h2>{{ .title }}</h2>
                 <ul class="project-tags">
