Minor adjustments to media queries and other styles

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <base href="{{ .Site.BaseURL }}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#0395DE" />
     <link rel="stylesheet" href="/css/style.css">
     {{ if .IsPage }}<link rel="stylesheet" href="/css/github-markdown.css" media="screen" charset="utf-8">{{ end }}
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,400i,600" rel="stylesheet">
